--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
 <body>
     <H1>hello</H1>
     <h3>heading 3</h3>
+    <table>
+        <tr>
+            <td>1</td>
+            <td>Zubayer</td>
+            <td>student</td>
+            <td>CU</td>
+        </tr>
+    </table>
+
+
+
+
+    <audio src="islamic audio.mp3" controls></audio>
+    <br>
+    <video src="islamic video.mp4" controls width="570px" height="420px"></video>
+    <br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/TcKNHN9FrQA?si=w-54T5JMaWlw6Ggh&amp;start=3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 
 </body>
 </html>
