--- a/index.html
+++ b/index.html
@@ -4,25 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <H1>hello</H1>
     <h3>heading 3</h3>
-    <table>
+   <!--<table>
         <tr>
             <td>1</td>
             <td>Zubayer</td>
             <td>student</td>
             <td>CU</td>
         </tr>
+    </table>-->
+    <!DOCTYPE html>
+<html>
+<head>
+    <title>Simple Table</title>
+</head>
+<body>
+    <table border="2px"> <!-- "border" attribute adds a border around the table -->
+        <tr> <!-- Represents a table row -->
+            <th>Header 1</th> <!-- Represents a table header cell -->
+            <th>Header 2</th>
+            <th>Header 3</th>
+        </tr>
+        <tr>
+            <td>Row 1, Cell 1</td> <!-- Represents a table data cell -->
+            <td>Row 1, Cell 2</td>
+            <td>Row 1, Cell 3</td>
+        </tr>
+        <tr>
+            <td>Row 2, Cell 1</td>
+            <td>Row 2, Cell 2</td>
+            <td>Row 2, Cell 3</td>
+        </tr>
     </table>
+</body>
+</html>
 
 
 
 
-    <audio src="islamic audio.mp3" controls></audio>
+<audio src="asset/islamic audio.mp3" controls></audio>
     <br>
-    <video src="islamic video.mp4" controls width="570px" height="420px"></video>
+    <video src="asset/islamic video.mp4" controls width="570px" height="420px"></video>
     <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/TcKNHN9FrQA?si=w-54T5JMaWlw6Ggh&amp;start=3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
